--- a/my-website/package.json
+++ b/my-website/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "serve": "^13.0.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
