--- a/my-website/package.json
+++ b/my-website/package.json
@@ -12,8 +12,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
-    "chokidar": "^3.5.3",
-    "pdfjs-dist": "^2.6.347",
+    "chokidar": "^3.5.1",
+    "default-gateway": "^6.0.3",
+    "pdfjs-dist": "^2.12.313",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
