--- a/my-website/package.json
+++ b/my-website/package.json
@@ -25,6 +25,7 @@
     "serve": "^13.0.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
+    "webpack": "^5.68.0",
     "webpack-dev-server": "^4.7.3"
   },
   "scripts": {
@@ -32,12 +33,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
